procore_logs/accident_logs/k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: accident-logs-frontend
spec:
  selector:
    app: accident-logs
    tier: frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
